--- a/src/app/dialogs/load-flowgraph/flowgraph-model-item-table/flowgraph-model-item-table.component.html
+++ b/src/app/dialogs/load-flowgraph/flowgraph-model-item-table/flowgraph-model-item-table.component.html
@@ -4,12 +4,12 @@
       
         <ng-container matColumnDef="TimeStamp">
           <th mat-header-cell *matHeaderCellDef>TimeStamp</th>
-          <td mat-cell *matCellDef="let element">{{element.TimeStamp | date :'short'}}</td>
+          <td mat-cell *matCellDef="let element">{{element.timeStamp | date :'short'}}</td>
         </ng-container>
   
         <ng-container matColumnDef="Comment">
           <th mat-header-cell *matHeaderCellDef>Comment</th>
-          <td mat-cell *matCellDef="let element">{{element.Comment}}</td>
+          <td mat-cell *matCellDef="let element">{{element.comment}}</td>
         </ng-container>
 
         <ng-container matColumnDef="Actions">
@@ -21,7 +21,7 @@
                     <mat-icon>open_in_browser</mat-icon>
                   </button> -->
 
-                  <button	*ngIf="router.url === '/flow_graph';" mat-icon-button color="primary" (click)= "clickStopper($event); onClickDelete(parentData._id,element);">
+                  <button mat-icon-button color="primary" (click)= "clickStopper($event); onClickDelete(parentData._id,element);">
                     <mat-icon>delete</mat-icon>
                   </button> 
                   
