--- a/src/app/flow-graph/toolbar-flow-graph/save-flowgraph/save-flowgraph.component.html
+++ b/src/app/flow-graph/toolbar-flow-graph/save-flowgraph/save-flowgraph.component.html
@@ -33,7 +33,7 @@
   
         <ng-container matColumnDef="Description">
           <th mat-header-cell *matHeaderCellDef>Description</th>
-          <td mat-cell *matCellDef="let element">{{element.Description}}</td>
+          <td mat-cell *matCellDef="let element">{{element.description}}</td>
         </ng-container>
   
        
