Fix the mat icon problem

--- a/src/app/flow-graph/toolbar-flow-graph/json-overview-flowgraph/json-overview-flowgraph.component.html
+++ b/src/app/flow-graph/toolbar-flow-graph/json-overview-flowgraph/json-overview-flowgraph.component.html
@@ -9,7 +9,7 @@
 
       <mat-dialog-actions align="center">
           <button mat-icon-button ngxClipboard [cbContent]="currentData" (click)="openSnackBar()">
-              <mat-icon>content_copy</mat-icon>
+              <mat-icon>file_copy</mat-icon>
           </button>
       </mat-dialog-actions>
       
