Update the UI and add login and register components

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,9 @@
+<nav>
+    <mat-toolbar color="primary">
+        <mat-toolbar-row>
+            <span>Flow Graph</span>
+        </mat-toolbar-row>
+    </mat-toolbar>
+</nav>
+<alert></alert>
 <router-outlet></router-outlet>
