--- a/src/app/flow-graph/flow-graph.component.html
+++ b/src/app/flow-graph/flow-graph.component.html
@@ -1,8 +1,11 @@
 <mat-grid-list cols="16" rows="7">
   <mat-grid-tile colspan = "1" rowspan="7">
-      <app-ng-toolbar-graph [toolbar] = 'toolbar' [graph] = 'graph' [editor] = 'editor' [codec] = 'codec'></app-ng-toolbar-graph>
+      <app-toolbar-manage [toolbar] = 'toolbar' [graph] = 'graph' [editor] = 'editor' [codec] = 'codec'></app-toolbar-manage>
   </mat-grid-tile>
-  <mat-grid-tile colspan = "15" rowspan="7">
+  <mat-grid-tile colspan = "14" rowspan="7">
       <div #graphContainer id="graphContainer" style="width: 100%; height: 100%;"></div>
+  </mat-grid-tile>
+  <mat-grid-tile colspan = "1" rowspan="7">
+      <app-ng-toolbar-graph [toolbar] = 'toolbar' [graph] = 'graph' [editor] = 'editor'></app-ng-toolbar-graph>
   </mat-grid-tile>
 </mat-grid-list>
