--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,9 @@
 <nav>
     <mat-toolbar color="primary">
-        <mat-toolbar-row>
-            <span>Flow Graph</span>
+        <mat-toolbar-row > 
+                <a routerLink="/" class="nav-link" style="color: #fff;background-color: transparent;">
+                    Flow Graph               
+                </a>
         </mat-toolbar-row>
     </mat-toolbar>
 </nav>
