--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,3 +1,9 @@
 h1.app-name{
     margin-left: 8px;
 }
+
+
+.bd-navbar .navbar-nav .nav-link.active, .bd-navbar .navbar-nav .nav-link:hover {
+    color: #fff;
+    background-color: transparent;
+  }
