--- a/src/app/flow-graph/flow-graph.component.html
+++ b/src/app/flow-graph/flow-graph.component.html
@@ -1,6 +1,6 @@
 <mat-grid-list cols="16" rows="7">
   <mat-grid-tile colspan = "1" rowspan="7">
-      <app-toolbar-manage [toolbar] = 'toolbar' [graph] = 'graph' [editor] = 'editor' [codec] = 'codec'></app-toolbar-manage>
+      <app-toolbar-manage fxFlexAlign="start" [toolbar] = 'toolbar' [graph] = 'graph' [editor] = 'editor' [codec] = 'codec'></app-toolbar-manage>
   </mat-grid-tile>
   <mat-grid-tile colspan = "14" rowspan="7">
       <div #graphContainer id="graphContainer" style="width: 100%; height: 100%;"></div>
