--- a/src/app/flow-graph/toolbar-manage/toolbar-manage.component.html
+++ b/src/app/flow-graph/toolbar-manage/toolbar-manage.component.html
@@ -1,4 +1,4 @@
-<div #toolbarContainer id="toolbarContainer" class="sidebar">
+<div #toolbarContainer id="toolbarContainer" style="margin-top: 50px">
     <button mat-raised-button matTooltip="New Graph" color="primary" (click)="onClickNew()">New</button>
     <button mat-raised-button matTooltip="Manage the FlowGraphs" color="primary" (click)="onClickManage()">Manage</button>
     <button mat-raised-button matTooltip="Export the current FlowGraph to JSON graph" color="primary" (click)="onClickJSON()">JSON</button>
