--- a/src/styles.css
+++ b/src/styles.css
@@ -3,9 +3,13 @@
 @import '~bootstrap/dist/css/bootstrap.min.css';
 
 .main-div{
-    height: 80vh;
+    height: 65vh;
     display: flex;
     justify-content: center;
     align-items: center;
   }
   
+button {
+    outline: 0 !important;
+    box-shadow: none!important;
+}
