Integrate with Identity service

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,7 +2,7 @@
     <mat-toolbar color="primary">
         <mat-toolbar-row > 
                 <a routerLink="/" class="nav-link" style="color: #fff;background-color: transparent;">
-                    Flow Graph               
+                    {{title}}          
                 </a>
         </mat-toolbar-row>
     </mat-toolbar>
