--- a/src/app/flow-graph/toolbar-manage/toolbar-manage.component.css
+++ b/src/app/flow-graph/toolbar-manage/toolbar-manage.component.css
@@ -1,6 +1,12 @@
-button{
+/* button{
     width: 90%;
     margin-left: 5%;
     margin-bottom: 12px;
+    font-size: 14px;
+} */
+
+button{
+    width: 90%;
+    margin-left: 5%;
     font-size: 14px;
 }
