--- a/src/app/components/flow-graph/toolbar-manage/load-flowgraph/flowgraph-model-item-table/flowgraph-model-item-table.component.html
+++ b/src/app/components/flow-graph/toolbar-manage/load-flowgraph/flowgraph-model-item-table/flowgraph-model-item-table.component.html
@@ -12,6 +12,11 @@
           <td mat-cell *matCellDef="let element">{{element.comment}}</td>
         </ng-container>
 
+        <ng-container matColumnDef="IdentityName">
+          <th mat-header-cell *matHeaderCellDef>Identity Name</th>
+          <td mat-cell *matCellDef="let element">{{element.identityName}}</td>
+        </ng-container>
+
         <ng-container matColumnDef="Actions">
             <th mat-header-cell *matHeaderCellDef>Actions</th>
             <td mat-cell *matCellDef="let element">
